<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="10dp">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/linearLayout_month"
                    tools:ignore="UseCompoundDrawables"
                    android:layout_centerInParent="true"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_month"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />
                    
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_drop_down"
                        tools:ignore="ContentDescription" />
                
                </LinearLayout>
            
            </RelativeLayout>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balanceFragment_balance_title"
                android:textColor="@color/white"
                android:textSize="15sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_balance"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:maxLines="1" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balanceFragment_income_title"
                        android:textColor="@color/white" />
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView_income"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:maxLines="1" />
                
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balanceFragment_expenditure_title"
                        android:textColor="@color/white" />
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView_expenditure"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:maxLines="1" />
                
                </LinearLayout>
            
            </LinearLayout>
        
        </LinearLayout>
        
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            android:background="@color/white" />
    
    </LinearLayout>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floatingActionButton"
        android:src="@drawable/ic_add"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp" />

</RelativeLayout>